seccion de introduccion

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
+    <link rel="stylesheet" href={% static 'css/bootstrap/bootstrap.min.css' %}>
 
     <title>Stefanie Muroya</title>
   </head>
-  <body>
-
+  <body style="height:100vh; width:100vw;">
 
     {% block content %}
     {% endblock %}
@@ -20,6 +19,21 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src={% static 'js/jquery-3.4.1.slim.min.js' %}></script>
     <script src={% static 'js/popper.min.js' %} ></script>
-    <script src={% static 'js/bootstrap.min.js' %}></script>
+    <script src={% static 'js/bootstrap/bootstrap.min.js' %}></script>
+    <!-- load scrollMagic library and dependencies-->
+    <script src={% static 'js/scrollMagic/plugins/gsap.min.js' %}></script>
+    <script src={% static 'js/scrollMagic/ScrollMagic.min.js' %}></script>
+    <script src={% static 'js/scrollMagic/plugins/debug.addIndicators.min.js' %}></script>
+    <script src={% static 'js/scrollMagic/plugins/animation.gsap.min.js' %}></script>
+    <script src={% static 'js/scrollMagic/plugins/animation.velocity.min.js' %}></script>
+
+    {% if isIndex  == True %}
+      <!-- solo cargamos esta pagina si estamos en la pagina principal -->
+      <script src={% static 'js/index.js' %}></script>
+    {% endif %}
+
+
+
+
   </body>
 </html>
