--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,83 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<h1>landpage</h1>
+<link rel="stylesheet" href={% static 'css/index.css' %}>
+<!-- Add icon library -->
+<script src="https://kit.fontawesome.com/dbd6a2f83f.js" crossorigin="anonymous"></script>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">Stefanie Muroya Lei</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+		<ul style="width:85vw" class="navbar-nav justify-content-end">
+			<li class="nav-item active">
+				<a class="nav-link" href="#">Educación <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Premios</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Becas</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Habilidades</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Idiomas</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="#">Otros Intereses</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://github.com/smml1996"><i class="fab fa-github"></i></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="https://www.instagram.com/michellemuroya/"><i class="fab fa-instagram"></i></a>
+			</li>
+		</ul>
+	</div>
+</nav>
+
+<div style="height:100vh;background-image: url({% static 'img/mandala0.png'%});background-repeat: no-repeat;background-size:cover;opacity:0.6;top: 100px;
+    left: 100px;
+    height: 100vh;
+    width: 100vw;"></div>
+<section style="opacity:1; position: absolute;
+    top: 5vh;
+    left: 1vw;
+    height: 100vh;
+    width: 100vw;" id="Introduction" >
+	<div  class="container">
+		<div  id="introRow" class="row align-items-center">
+			<div  class="media" style="background-color: rgb(219,187,138); padding:1em; border-radius:10%">
+			  <img id="pp" src="{% static 'img/pp.jpeg' %}" class=" mr-3" alt="profilepic">
+			  <div class="media-body align-self-center" >
+					<h1> Stefanie Muroya Lei </h1>
+			    <p class="color:white;">Entusiasta universitaria que actualmente se encuentra en el cuarto año de la carrera Ciencia de la Computación. Interesada en aprovechar al máximo sus experiencias en todo el mundo, y aprender nuevas herramientas para producir nuevos productos interesantes. Mucho interés en estructuras de datos y algoritmos, y actualmente investigando en computación cuántica. Amante de los desafíos de programación, extrovertida, apasionada y comprometida con lo que hace.</p>
+					<h5 style="float:right"><span class="badge badge-secondary">+51 966 880 974</span><span class="badge badge-secondary" style="margin-left:1em;">stefanie.muroya@ucsp.edu.pe</span><span class="badge badge-secondary" style="margin-left:1em;">michellemuroya96@gmail.com</span></h5>
+
+			  </div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<div id="parallax1" class="parallaxParent">
+	<div style="background-image: url({% static 'img/mandala11.jpg'%});background-repeat: no-repeat;background-size:cover;opacity: 0.4;"></div>
+
+
+</div>
+<div id="parallax2" class="parallaxParent">
+	<div style="background-image: url({% static 'img/mandala2.jpg'%});background-repeat: no-repeat;background-size:cover;opacity: 0.4;"></div>
+</div>
+
+
+<div id="parallax3" class="parallaxParent">
+	<div style="background-image: url({% static 'img/mandala3.jpg'%});;background-repeat: no-repeat;background-size:cover;opacity: 0.4;"></div>
+</div>
+
+
 {% endblock content %}
